// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountField render a date field 1`] = `
<div
  className="styles__o-field___3n5HM u-m-0"
>
  <Label
    block={true}
    className=""
    error={false}
    htmlFor=""
  >
    fields.date.label
  </Label>
  <Input
    autoComplete="off"
    error={false}
    fullwidth={true}
    id=""
    inputRef={[Function]}
    name="date"
    placeholder="fields.date.placeholder"
    size="medium"
    type="date"
  />
</div>
`;

exports[`AccountField render a dropdown field 1`] = `
<div
  className="styles__o-field___3n5HM u-m-0"
>
  <Label
    block={true}
    className=""
    error={false}
    htmlFor=""
  >
    fields.multiple.label
  </Label>
  <Aware
    className="u-m-0"
    error={false}
    fieldProps={Object {}}
    fullwidth={true}
    id=""
    inputRef={[Function]}
    label="fields.multiple.label"
    labelProps={Object {}}
    name="multiple"
    options={
      Array [
        Object {
          "label": "Option 1",
          "value": "option1",
        },
        Object {
          "label": "Option 2",
          "value": "option2",
        },
      ]
    }
    placeholder="fields.multiple.placeholder"
    required={true}
    secondaryLabels={Object {}}
    side={null}
    size="medium"
    t={
      [MockFunction] {
        "calls": Array [
          Array [
            "legacy.fields.multiple.label",
            Object {
              "_": "multiple",
            },
          ],
          Array [
            "fields.multiple.label",
            Object {
              "_": "legacy.fields.multiple.label",
            },
          ],
          Array [
            "fields.multiple.placeholder",
            Object {
              "_": "",
            },
          ],
          Array [
            "accountForm.password.hide",
          ],
          Array [
            "accountForm.password.show",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": "legacy.fields.multiple.label",
          },
          Object {
            "type": "return",
            "value": "fields.multiple.label",
          },
          Object {
            "type": "return",
            "value": "fields.multiple.placeholder",
          },
          Object {
            "type": "return",
            "value": "accountForm.password.hide",
          },
          Object {
            "type": "return",
            "value": "accountForm.password.show",
          },
        ],
      }
    }
    type="select"
  />
</div>
`;

exports[`AccountField render a password field 1`] = `
<div
  className="styles__o-field___3n5HM u-m-0"
>
  <Label
    block={true}
    className=""
    error={false}
    htmlFor=""
  >
    fields.passphrase.label
  </Label>
  <InputPassword
    autoComplete="new-password"
    error={false}
    fullwidth={true}
    hideLabel="accountForm.password.hide"
    id=""
    inputRef={[Function]}
    name="passphrase"
    placeholder="fields.passphrase.placeholder"
    showLabel="accountForm.password.show"
    size="medium"
    type="password"
  />
</div>
`;

exports[`AccountField should render 1`] = `
<div
  className="styles__o-field___3n5HM u-m-0"
>
  <Label
    block={true}
    className=""
    error={false}
    htmlFor=""
  >
    fields.username.label
  </Label>
  <Input
    autoComplete="off"
    error={false}
    fullwidth={true}
    id=""
    inputRef={[Function]}
    name="username"
    placeholder="fields.username.placeholder"
    size="medium"
    type="text"
  />
</div>
`;
